--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
       href="https://fonts.googleapis.com/css2?family=Whisper&display=swap"
       rel="stylesheet"
     />
-    <title>AY</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Gopaddi Design</title>
   </head>
   <body>
     <div id="root"></div>
